[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/day_changing.gd" type="Script" id=1]
[ext_resource path="res://resources/Neucha-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
use_filter = true
font_data = ExtResource( 2 )

[node name="DayChanging" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -14.0
margin_top = -19.0
margin_right = 1297.0
margin_bottom = 732.0
color = Color( 0, 0, 0, 0.670588 )

[node name="OldDay" type="Label" parent="."]
margin_left = 1300.0
margin_top = 300.0
margin_right = 1475.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 1 )
text = "Day 0"

[node name="NewDay" type="Label" parent="."]
margin_left = -363.0
margin_top = 300.0
margin_right = -87.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 1 )
text = "Day 1"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
